# uff-2025-offene-ki-didaktische-chance-kleiber-andree

./: README.md
uff-2025-image-rec-demo/: .gitignore  uff-2025-tier-prediction-lr.ipynb  uff-2025-tier-prediction-nn.ipynb
uff-2025-open-ai-demo/: README.md  index.html  package-lock.json  package.json
uff-2025-open-ai-demo/backend/: pyproject.toml
uff-2025-open-ai-demo/backend/src/backend/: cli.py
uff-2025-open-ai-demo/backend/src/backend/api/: api.py  models.py
uff-2025-open-ai-demo/backend/src/backend/llm/: generate.py
uff-2025-open-ai-demo/backend/src/backend/ngram/: generate.py  model.py  ngram_model.json  train.py
uff-2025-open-ai-demo/backend/src/backend/ngram/documents/: wikipedia-open-source.txt
uff-2025-open-ai-demo/src/: App.vue
