[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "Ingo Kleiber",email = "ingo.kleiber@uni-koeln.de"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard] (>=0.115.12,<0.116.0)",
    "openai (>=1.76.0,<2.0.0)"
]

[tool.poetry]
package-mode = true
packages = [
    { include = "backend", from = "src" }
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
cli = "backend.cli:main"